objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>BC_Id__c</fullName>
        <label>BC Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASM_ID__c</fullName>
        <externalId>true</externalId>
        <label>ASM_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCD_ID__c</fullName>
        <externalId>true</externalId>
        <label>PCD_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_type__c</fullName>
        <description>BC job title or speciality</description>
        <label>BC type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_PB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass PB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsManager__c</fullName>
        <formula>IF (!CONTAINS(UserRole.Name , &apos;BC&apos;), true, false)</formula>
        <label>Is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BC_QR_Code__c</fullName>
        <label>BC QR Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HighEnd_BC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HighEnd BC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASM_CODE_ID__c</fullName>
        <externalId>true</externalId>
        <label>ASM_CODE_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_POS_Code__c</fullName>
        <externalId>true</externalId>
        <label>SAP POS Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Languages__c</fullName>
        <label>App Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leave_End_Date__c</fullName>
        <label>Leave End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vonage_Account__c</fullName>
        <label>Vonage Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LVMH CS</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Leave_Status__c</fullName>
        <formula>IF(
AND(
TODAY() &gt;= Leave_Start_Date__c,
TODAY() &lt;=  Leave_End_Date__c,
NOT(ISBLANK(Leave_Start_Date__c)),
NOT(ISBLANK(Leave_Start_Date__c))),
true, false)</formula>
        <label>On Leave Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leave_Start_Date__c</fullName>
        <label>Leave Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bypass_Manual_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents &quot;Is manually created&quot; checkbox on Contacts from being true - allows to identify records created by flow VS records manually created.</description>
        <inlineHelpText>Checked if contacts created by this user are not created manually - should be checked for API user only.</inlineHelpText>
        <label>Bypass Manual Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clienteling_Store_Name__c</fullName>
        <label>Clienteling Store Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Validation rules from being run for the current user.</description>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recently_Used_Content_Library_Ids__c</fullName>
        <label>Recently Used Content Library Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bypass_Account_Modification_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for bypass of Account modify/edit for profiles for which Modification Channel should not change to SCPCD. Should be checked for API User.</description>
        <inlineHelpText>Flag for bypass of Account modify/edit for profiles for which Modification Channel should not change to SCPCD. Should be checked for API User.</inlineHelpText>
        <label>Bypass Account Modification Update</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>